Closed Bug 391346 Opened 18 years ago Closed 18 years ago

Fix technically unsafe static cast and some compiler warnings

Categories

(Firefox :: Bookmarks & History, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: neil, Unassigned)

References

Details

Attachments

(2 files)

nsIMorkHistoryImporter::ImportHistory blindly casts to nsNavHistory. There's no reason to import in a separate object, so I moved import into nsNavHistory. I also fixed a few compiler warnings, one of which looks serious.
Attached patch Proposed patchSplinter Review
Attachment #275758 - Flags: review?(mano)
Blocks: 382187
> I also fixed a few compiler warnings, one of which looks serious. which warning looked serious?
(In reply to comment #2) >which warning looked serious? This one: (From update of attachment 275758 [details] [diff] [review]) >-const PRTime EXPIRATION_POLICY_MONTHS = (180 * 86400 * PR_MSEC_PER_SEC); >+const PRTime EXPIRATION_POLICY_MONTHS = ((PRTime)180 * 86400 * PR_MSEC_PER_SEC); warning C4307: '*' : integral constant overflow
Comment on attachment 275758 [details] [diff] [review] Proposed patch as disscussed over #composer, it would be better to keep the separate c++ file here (like we do for autocomplete).
Attachment #275758 - Flags: review?(mano) → review-
Attachment #276775 - Flags: review?(mano)
Comment on attachment 276775 [details] [diff] [review] Addressed review comments r=mano.
Attachment #276775 - Flags: review?(mano) → review+
Fix was checked in 3 days ago, sorry for not closing the bug earlier.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h". In Thunderbird 3.0b, you do that as follows: Tools | Message Filters Make sure the correct account is selected. Click "New" Conditions: Body contains places-to-b-and-h Change the action to "Delete Message". Select "Manually Run" from the dropdown at the top. Click OK. Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter. Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: