Bug 391346 nsMorkHistoryImporter contains potentially unsafe static cast plus fix some compiler warnings such as integer constant overflow r=Mano