toolkit/components/places/src/nsMorkHistoryImporter.cpp
@@ -36,14 +36,12 @@
  *
  * ***** END LICENSE BLOCK ***** */
 
-#include "nsMorkHistoryImporter.h"
+#include "nsMorkReader.h"
 #include "nsNavHistory.h"
 #include "mozStorageHelper.h"
 #include "prprf.h"
 #include "nsNetUtil.h"
 #include "nsTArray.h"
-
-NS_IMPL_ISUPPORTS1(nsMorkHistoryImporter, nsIMorkHistoryImporter)
 
 // Columns for entry (non-meta) history rows
 enum {
@@ -95,11 +93,11 @@ SwapBytes(PRUnichar *buffer)
   }
 }
 
-// Enumerator callback to add a table row to the NavHistoryService
-/* static */ PLDHashOperator PR_CALLBACK
-nsMorkHistoryImporter::AddToHistoryCB(const nsCSubstring &aRowID,
-                                      const nsTArray<nsCString> *aValues,
-                                      void *aData)
+// Enumerator callback to add a table row to history
+static PLDHashOperator PR_CALLBACK
+AddToHistoryCB(const nsCSubstring &aRowID,
+               const nsTArray<nsCString> *aValues,
+               void *aData)
 {
   TableReadClosure *data = static_cast<TableReadClosure*>(aData);
   const nsMorkReader *reader = data->reader;
@@ -166,15 +164,16 @@ nsMorkHistoryImporter::AddToHistoryCB(const nsCSubstring &aRowID,
   return PL_DHASH_NEXT;
 }
 
+// nsNavHistory::ImportHistory
+//
 // ImportHistory is the main entry point to the importer.
 // It sets up the file stream and loops over the lines in the file to
 // parse them, then adds the resulting row set to history.
-
+//
 NS_IMETHODIMP
-nsMorkHistoryImporter::ImportHistory(nsIFile *aFile,
-                                     nsINavHistoryService *aHistory)
+nsNavHistory::ImportHistory(nsIFile* aFile)
 {
-  NS_ENSURE_TRUE(aFile && aHistory, NS_ERROR_NULL_POINTER);
+  NS_ENSURE_TRUE(aFile, NS_ERROR_NULL_POINTER);
 
   // Check that the file exists before we try to open it
   PRBool exists;
@@ -192,8 +191,7 @@ nsMorkHistoryImporter::ImportHistory(nsIFile *aFile,
   NS_ENSURE_SUCCESS(rv, rv);
 
   // Gather up the column ids so we don't need to find them on each row
-  nsNavHistory *history = static_cast<nsNavHistory*>(aHistory);
-  TableReadClosure data(&reader, history);
+  TableReadClosure data(&reader, this);
   const nsTArray<nsMorkReader::MorkColumn> &columns = reader.GetColumns();
   for (PRUint32 i = 0; i < columns.Length(); ++i) {
     const nsCSubstring &name = columns[i].name;
@@ -229,18 +227,18 @@ nsMorkHistoryImporter::ImportHistory(nsIFile *aFile,
   }
 
   // Now add the results to history
-  mozIStorageConnection *conn = history->GetStorageConnection();
+  mozIStorageConnection *conn = GetStorageConnection();
   NS_ENSURE_TRUE(conn, NS_ERROR_NOT_INITIALIZED);
   mozStorageTransaction transaction(conn, PR_FALSE);
 #ifdef IN_MEMORY_LINKS
-  mozIStorageConnection *memoryConn = history->GetMemoryStorageConnection();
+  mozIStorageConnection *memoryConn = GetMemoryStorageConnection();
   mozStorageTransaction memTransaction(memoryConn, PR_FALSE);
 #endif
 
   reader.EnumerateRows(AddToHistoryCB, &data);
 
   // Make sure we don't have any duplicate items in the database.
-  rv = history->RemoveDuplicateURIs();
+  rv = RemoveDuplicateURIs();
   NS_ENSURE_SUCCESS(rv, rv);
 
 #ifdef IN_MEMORY_LINKS
